--- a/scrabble/mockup.html
+++ b/scrabble/mockup.html
@@ -6,7 +6,7 @@
 	<div id="scrabble-widget">
 		<div class="scrabble-impl">
 			<div class="word">Word</div>
-			<input class="guess">
+			<input class="guess"><img src="/images/check.png" class="check"><img src="/images/x.png" class="x">
 		</div>
 	</div>
 	</body>
