--- a/scrabble/example.html
+++ b/scrabble/example.html
@@ -6,8 +6,10 @@
 	</head>
 	<body>	
 		<div class="scrabble">
-			<div class="word">foobarbaz</div>
-			<input class="guess">
+			<div class="setup">
+				<span class="word">foobarbaz</span>
+				<input class="guess">
+			</div>
 		</div>
 	</body>
 </html>
