--- a/scrabble/mockup.html
+++ b/scrabble/mockup.html
@@ -4,8 +4,9 @@
 	</head>
 	<body>
 	<div id="scrabble-widget">
+		<h1>Scrabble</h1>
 		<div class="scrabble-impl">
-			<div class="word">Word</div>
+			<span class="word">Word</span><br>
 			<input class="guess"><img src="/images/check.png" class="check"><img src="/images/x.png" class="x">
 		</div>
 	</div>
